added better browser command functionality

--- a/quantuiti/api/templates/index.html
+++ b/quantuiti/api/templates/index.html
@@ -18,7 +18,7 @@
     
         </div>
         <div class="right-div">
-            <div class="console"></div>
+            <div class="console" id="console"></div>
             <form onsubmit="command();" action="javascript: void(0)">
                 <input type="text" id="console-input" >
                 <button type="submit">Submit</button>
